--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         'bg-banner': "url('./images/banner.png')",
                     },
                     colors: {
-                        'secondary-color': '#707070',
                         'primary-color': '#B68C5A',
+                        'secondary-color': '#707070',
                     },
                 }
             }
@@ -102,9 +102,12 @@
                     <div>
                         <!-- banner title & description -->
                         <div class="lg:max-w-3xl">
-                            <h1 class="mb-5 text-[#FFF] text-2xl lg:text-7xl lg:font-extrabold font-eb-garamond">We Provide
+                            <h1 class="mb-5 text-[#FFF] text-2xl lg:text-7xl lg:font-extrabold font-eb-garamond">We
+                                Provide
                                 Effective Legal Solutions</h1>
-                            <p class="mb-5 text-xs lg:text-base font-poppins text-[#E7E7E7]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <p class="mb-5 text-xs lg:text-base font-poppins text-[#E7E7E7]">There are many variations
+                                of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+                                form, by injected humour.</p>
                         </div>
                         <!-- banner input & btn -->
                         <div>
@@ -112,7 +115,8 @@
                                 class="p-4 lg:w-[350px] bg-[#FFF] rounded-lg text-[#A0A0A0] font-poppins text-base outline-none "
                                 type="text" placeholder="Search your services">
                             <div class="inline-block py-8 ml-5">
-                                <a class="btn rounded-lg bg-primary-color md:w-[150px] md:text-xl text-white font-semibold font-poppins capitalize border-0">Search</a>
+                                <a
+                                    class="btn rounded-lg bg-primary-color md:w-[150px] md:text-xl text-white font-semibold font-poppins capitalize border-0">Search</a>
                             </div>
                         </div>
                     </div>
@@ -121,8 +125,103 @@
         </section>
         <!-- banner section ends here -->
     </header>
-    <main>
+    <main class="max-w-7xl m-auto">
+        <!-- legal practice section starts here -->
+        <section>
+            <div class="my-3 md:my-20 text-center">
+                <!-- heading & description -->
+                <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4">The Legal Practice Area</h2>
+                <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <!-- legal card container -->
+                <div class="grid grid-cols-1 lg:grid-cols-3 my-12">
+                    <!-- legal card 1 -->
+                    <div class="card cursor-pointer  hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/business.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Business Law</h2>
+                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions mt-2">
+                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                          </div>
+                        </div>
+                      </div>
+                    <!-- legal card 2 -->
+                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/criminal.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Criminal Law</h2>
+                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions mt-2">
+                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                          </div>
+                        </div>
+                      </div>
+                    <!-- legal card 3 -->
+                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/child.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Child Support</h2>
+                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions mt-2">
+                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                          </div>
+                        </div>
+                      </div>
+                    <!-- legal card 4 -->
+                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/education.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Education Law</h2>
+                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions mt-2">
+                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                          </div>
+                        </div>
+                      </div>
+                    <!-- legal card 5 -->
+                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/divorce.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Divorce Law</h2>
+                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions mt-2">
+                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                          </div>
+                        </div>
+                      </div>
+                    <!-- legal card 6 -->
+                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/tax.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Tax Law</h2>
+                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions mt-2">
+                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+        <!-- legal practice section ends here -->
 
+        <!-- client say section starts here -->
+        <section>
+            
+        </section>
+        <!-- client say section ends here -->
     </main>
     <footer>
 
