--- a/index.html
+++ b/index.html
@@ -131,87 +131,112 @@
             <div class="my-3 md:my-20 text-center">
                 <!-- heading & description -->
                 <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4">The Legal Practice Area</h2>
-                <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">There are many variations
+                    of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                    injected humour.</p>
                 <!-- legal card container -->
                 <div class="grid grid-cols-1 lg:grid-cols-3 my-12">
                     <!-- legal card 1 -->
-                    <div class="card cursor-pointer  hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                    <div
+                        class="card cursor-pointer  hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
                         <figure class="px-10 pt-10">
-                          <img src="./images/business.png" alt="" class="rounded-xl" />
+                            <img src="./images/business.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Business Law</h2>
-                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                          <div class="card-actions mt-2">
-                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
-                          </div>
+                            <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Business Law
+                            </h2>
+                            <p class="text-base text-secondary-color font-poppins">There are many variations of passages
+                                of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                                injected humour.</p>
+                            <div class="card-actions mt-2">
+                                <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     <!-- legal card 2 -->
-                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                    <div
+                        class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
                         <figure class="px-10 pt-10">
-                          <img src="./images/criminal.png" alt="" class="rounded-xl" />
+                            <img src="./images/criminal.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Criminal Law</h2>
-                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                          <div class="card-actions mt-2">
-                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
-                          </div>
+                            <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Criminal Law
+                            </h2>
+                            <p class="text-base text-secondary-color font-poppins">There are many variations of passages
+                                of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                                injected humour.</p>
+                            <div class="card-actions mt-2">
+                                <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     <!-- legal card 3 -->
-                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                    <div
+                        class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
                         <figure class="px-10 pt-10">
-                          <img src="./images/child.png" alt="" class="rounded-xl" />
+                            <img src="./images/child.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Child Support</h2>
-                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                          <div class="card-actions mt-2">
-                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
-                          </div>
+                            <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Child Support
+                            </h2>
+                            <p class="text-base text-secondary-color font-poppins">There are many variations of passages
+                                of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                                injected humour.</p>
+                            <div class="card-actions mt-2">
+                                <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     <!-- legal card 4 -->
-                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                    <div
+                        class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
                         <figure class="px-10 pt-10">
-                          <img src="./images/education.png" alt="" class="rounded-xl" />
+                            <img src="./images/education.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Education Law</h2>
-                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                          <div class="card-actions mt-2">
-                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
-                          </div>
+                            <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Education Law
+                            </h2>
+                            <p class="text-base text-secondary-color font-poppins">There are many variations of passages
+                                of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                                injected humour.</p>
+                            <div class="card-actions mt-2">
+                                <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     <!-- legal card 5 -->
-                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                    <div
+                        class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
                         <figure class="px-10 pt-10">
-                          <img src="./images/divorce.png" alt="" class="rounded-xl" />
+                            <img src="./images/divorce.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Divorce Law</h2>
-                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                          <div class="card-actions mt-2">
-                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
-                          </div>
+                            <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Divorce Law
+                            </h2>
+                            <p class="text-base text-secondary-color font-poppins">There are many variations of passages
+                                of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                                injected humour.</p>
+                            <div class="card-actions mt-2">
+                                <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                     <!-- legal card 6 -->
-                    <div class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
+                    <div
+                        class="card cursor-pointer hover:border hover:border-[#E7E7E7] hover:bg-gradient-to-r from-[#d6d3d3e5] to-[#F3F3F300] ">
                         <figure class="px-10 pt-10">
-                          <img src="./images/tax.png" alt="" class="rounded-xl" />
+                            <img src="./images/tax.png" alt="" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                          <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Tax Law</h2>
-                          <p class="text-base text-secondary-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                          <div class="card-actions mt-2">
-                            <button class=""><img src="./images/icons/Frame.png" alt=""></button>
-                          </div>
+                            <h2 class="card-title text-3xl text-[#414040] font-extrabold font-eb-garamond">Tax Law</h2>
+                            <p class="text-base text-secondary-color font-poppins">There are many variations of passages
+                                of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                                injected humour.</p>
+                            <div class="card-actions mt-2">
+                                <button class=""><img src="./images/icons/Frame.png" alt=""></button>
+                            </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -219,9 +244,88 @@
 
         <!-- client say section starts here -->
         <section>
-            
+            <div class="my-3 md:my-20 text-center">
+                <!-- heading & description -->
+                <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4">What Our Client Say</h2>
+                <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">There are many variations
+                    of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                    injected humour.</p>
+
+                <!-- slider container -->
+                <div class="my-20">
+                    <div class="carousel lg:h-[550px] ">
+                        <!-- slider 1 -->
+                        <div id="slide1" class=" carousel-item relative w-full">
+                            <img src="./images/slider-1.jpg" class="w-full" />
+                            <div
+                                class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide3" class="btn btn-circle">❮</a>
+                                <!-- slider content -->
+                                <div class="flex flex-col justify-center w-[900px] space-y-5 ">
+                                    <img class="w-[50px] m-auto" src="./images/man.png" alt="">
+                                    <h4 class="text-2xl text-[#fff] font-extrabold font-eb-garamond">Awlad Hossain</h4>
+                                    <p class="text-base text-[#fff] font-poppins">UIX Designer</p>
+                                    <p class="text-xs lg:text-base text-[#fff] font-poppins">Contrary to popular belief,
+                                        Lorem
+                                        Ipsum is not simply random text. It has roots in a piece of classical Latin
+                                        literature from 45 BC, making it over 2000 years old. Richard McClintock, a
+                                        Latin professor at Hampden-Sydney College in Virginia, looked up one of the more
+                                        obscure Latin words, consectetur.</p>
+                                </div>
+                                <a href="#slide2" class="btn btn-circle">❯</a>
+                            </div>
+                        </div>
+                        <!-- slider 2 -->
+                        <div id="slide2" class=" carousel-item relative w-full">
+                            <img src="./images/slider-2.jpg" class="w-full" />
+                            <div
+                                class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide1" class="btn btn-circle">❮</a>
+                                <!-- slider content -->
+                                <div class="flex flex-col justify-center w-[900px] space-y-5 ">
+                                    <img class="w-[50px] m-auto" src="./images/man.png" alt="">
+                                    <h4 class="text-2xl text-[#fff] font-extrabold font-eb-garamond">Awlad Hossain</h4>
+                                    <p class="text-base text-[#fff] font-poppins">UIX Designer</p>
+                                    <p class="text-xs lg:text-base text-[#fff] font-poppins">Contrary to popular belief,
+                                        Lorem
+                                        Ipsum is not simply random text. It has roots in a piece of classical Latin
+                                        literature from 45 BC, making it over 2000 years old. Richard McClintock, a
+                                        Latin professor at Hampden-Sydney College in Virginia, looked up one of the more
+                                        obscure Latin words, consectetur.</p>
+                                </div>
+
+                                <a href="#slide3" class="btn btn-circle">❯</a>
+                            </div>
+                        </div>
+                        <!-- slider 3 -->
+                        <div id="slide3" class=" carousel-item relative w-full">
+                            <img src="./images/slider-3.jpg" class="w-full" />
+                            <div
+                                class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                <a href="#slide2" class="btn btn-circle">❮</a>
+                                <!-- slider content -->
+                                <div class="flex flex-col justify-center w-[900px] space-y-5 ">
+                                    <img class="w-[50px] m-auto" src="./images/man.png" alt="">
+                                    <h4 class="text-2xl text-[#fff] font-extrabold font-eb-garamond">Awlad Hossain</h4>
+                                    <p class="text-base text-[#fff] font-poppins">UIX Designer</p>
+                                    <p class="text-xs lg:text-base text-[#fff] font-poppins">Contrary to popular belief,
+                                        Lorem Ipsum is not simply random text. It has roots in a piece of classical
+                                        Latin
+                                        literature from 45 BC, making it over 2000 years old. Richard McClintock, a
+                                        Latin professor at Hampden-Sydney College in Virginia, looked up one of the more
+                                        obscure Latin words, consectetur.</p>
+                                </div>
+
+                                <a href="#slide1" class="btn btn-circle">❯</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- client say section ends here -->
+
+        <!--  -->
     </main>
     <footer>
 
