add question section and make responsive

--- a/index.html
+++ b/index.html
@@ -325,7 +325,66 @@
         </section>
         <!-- client say section ends here -->
 
-        <!--  -->
+        <!-- questions  section starts here -->
+        <section>
+            <div class="my-3 md:my-20 text-center">
+            <!-- heading & description -->
+            <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4 text-center">Frequently Asked Any Questions</h2>
+            <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+            <!-- container -->
+            <div class="flex flex-col lg:flex-row items-center justify-center gap-5 mt-10">
+                <!-- question -->
+                <div class="flex-1">
+                    <!-- qna 1 -->
+                    <div class="collapse collapse-plus bg-base-200 mb-5">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium">
+                           01. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                      </div>
+                      <!-- qna 2 -->
+                      <div class="collapse collapse-plus bg-base-200 mb-5">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            02. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                      </div>
+                      <!-- qna 3 -->
+                      <div class="collapse collapse-plus bg-base-200 mb-5">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            03. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                      </div>
+                      <!-- qna 4 -->
+                      <div class="collapse collapse-plus bg-base-200 mb-5">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            04. Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content"> 
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                      </div>
+                </div>
+                <!-- question img -->
+                <div class="flex-1">
+                    <img class="lg:w-3/5" src="./images/faq.png" alt="">
+                </div>
+            </div>
+            </div>
+        </section>
+        <!-- questions  section ends here -->
     </main>
     <footer>
 
