add contact section and make responsive

--- a/index.html
+++ b/index.html
@@ -328,63 +328,147 @@
         <!-- questions  section starts here -->
         <section>
             <div class="my-3 md:my-20 text-center">
-            <!-- heading & description -->
-            <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4 text-center">Frequently Asked Any Questions</h2>
-            <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <!-- heading & description -->
+                <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4 text-center">Frequently Asked
+                    Any Questions</h2>
+                <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">There are many variations
+                    of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                    injected humour.</p>
 
-            <!-- container -->
-            <div class="flex flex-col lg:flex-row items-center justify-center gap-5 mt-10">
-                <!-- question -->
-                <div class="flex-1">
-                    <!-- qna 1 -->
-                    <div class="collapse collapse-plus bg-base-200 mb-5">
-                        <input type="radio" name="my-accordion-3" checked="checked" /> 
-                        <div class="collapse-title text-xl font-medium">
-                           01. Are application fee waivers available?
+                <!-- container -->
+                <div class="flex flex-col lg:flex-row items-center justify-center gap-5 mt-10">
+                    <!-- question -->
+                    <div class="flex-1">
+                        <!-- qna 1 -->
+                        <div class="collapse collapse-plus bg-base-200 mb-5">
+                            <input type="radio" name="my-accordion-3" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                01. Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content">
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                    suffered alteration in some form, by injected humour.</p>
+                            </div>
                         </div>
-                        <div class="collapse-content"> 
-                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <!-- qna 2 -->
+                        <div class="collapse collapse-plus bg-base-200 mb-5">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                02. Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content">
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                    suffered alteration in some form, by injected humour.</p>
+                            </div>
                         </div>
-                      </div>
-                      <!-- qna 2 -->
-                      <div class="collapse collapse-plus bg-base-200 mb-5">
-                        <input type="radio" name="my-accordion-3" /> 
-                        <div class="collapse-title text-xl font-medium">
-                            02. Are application fee waivers available?
+                        <!-- qna 3 -->
+                        <div class="collapse collapse-plus bg-base-200 mb-5">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                03. Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content">
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                    suffered alteration in some form, by injected humour.</p>
+                            </div>
                         </div>
-                        <div class="collapse-content"> 
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <!-- qna 4 -->
+                        <div class="collapse collapse-plus bg-base-200 mb-5">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                04. Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content">
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                    suffered alteration in some form, by injected humour.</p>
+                            </div>
                         </div>
-                      </div>
-                      <!-- qna 3 -->
-                      <div class="collapse collapse-plus bg-base-200 mb-5">
-                        <input type="radio" name="my-accordion-3" /> 
-                        <div class="collapse-title text-xl font-medium">
-                            03. Are application fee waivers available?
-                        </div>
-                        <div class="collapse-content"> 
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                        </div>
-                      </div>
-                      <!-- qna 4 -->
-                      <div class="collapse collapse-plus bg-base-200 mb-5">
-                        <input type="radio" name="my-accordion-3" /> 
-                        <div class="collapse-title text-xl font-medium">
-                            04. Are application fee waivers available?
-                        </div>
-                        <div class="collapse-content"> 
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                        </div>
-                      </div>
+                    </div>
+                    <!-- question img -->
+                    <div class="flex-1">
+                        <img class="lg:w-3/5" src="./images/faq.png" alt="">
+                    </div>
                 </div>
-                <!-- question img -->
-                <div class="flex-1">
-                    <img class="lg:w-3/5" src="./images/faq.png" alt="">
-                </div>
-            </div>
             </div>
         </section>
         <!-- questions  section ends here -->
+
+        <!-- contact us sections starts here -->
+        <section>
+            <!-- contact us container -->
+            <div class="my-3 md:my-20 text-center">
+                <!-- heading & description -->
+                <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4 text-center">Contact With Us</h2>
+                <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+                
+                <div class="flex flex-col lg:flex-row mt-12 items-center">
+                    <!-- contact cards-->
+                <div class="grid gap-5 grid-cols-1 lg:grid-cols-2 flex-1">
+                    <!-- card 1 -->
+                    <div class="card bg-[#efe9e9]">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/icons/location.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
+                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                            New York, NY 535022</p>
+                        </div>
+                      </div>
+                    <!-- card 2 -->
+                    <div class="card bg-[#efe9e9]">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/icons/call.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
+                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                            New York, NY 535022</p>
+                        </div>
+                      </div>
+                    <!-- card 3 -->
+                    <div class="card bg-[#efe9e9]">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/icons/email.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
+                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                            New York, NY 535022</p>
+                        </div>
+                      </div>
+                    <!-- card 4 -->
+                    <div class="card bg-[#efe9e9]">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/icons/time.png" alt="" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
+                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                            New York, NY 535022</p>
+                        </div>
+                      </div>
+
+                </div>
+                <!-- contact form -->
+                <div class="flex-1">
+                    <form action="#">
+                        <input class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 mt-3 " type="text" placeholder="Your Name"> <br>
+                        <input class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 " type="email" placeholder="Your Email"> <br>
+                        <input class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 " type="text" placeholder="Subject"> <br>
+                        <textarea class="text-base border-none outline-none text-secondary-color lg:w-[500px] font-poppins rounded-lg bg-[#F3F3F3] p-5 mb-3 " name="" id="" cols="25" rows="3" placeholder="Your Message" ></textarea> <br>
+                        <input class="btn rounded-lg bg-primary-color lg:w-[500px] md:text-lg text-white font-semibold font-poppins capitalize" type="submit" value="Send Message"> <br>
+
+                    </form>
+
+                </div>
+                </div>
+            </div>
+        </section>
+        <!-- contact us sections ends here -->
+        
     </main>
     <footer>
 
